[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseox"
version = "0.1.0"
description = "Tools to create, update, and monitor a system pulse and dashboard."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "PulseOx Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic",
    "notifiers",
    "click>=8.0.0",
    "python-dateutil>=2.8.0",
    "croniter>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=5.0.0",
    "pylint",
    "ruff>=0.13.3",
    "flask>=2.0.0",
]

[project.scripts]
pulseox = "pulseox.ui.cli:cli"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
