[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseox"
version = "0.1.0"
description = "Tools to create, update, and monitor a system pulse and dashboard."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPL-3.0-or-later"}
keywords = ["github", "monitoring", "dashboard", "pulse", "status"]
authors = [
    {name = "PulseOx Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic",
    "notifiers",
    "click>=8.0.0",
    "python-dateutil>=2.8.0",
    "croniter>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/emin-shopper/pulseox"
Repository = "https://github.com/emin-shopper/pulseox"
Issues = "https://github.com/emin-shopper/pulseox/issues"
Documentation = "https://github.com/emin-shopper/pulseox#readme"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=5.0.0",
    "pylint",
    "ruff>=0.13.3",
    "flask>=2.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.scripts]
pulseox = "pulseox.ui.cli:cli"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
